<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="8" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:gravity="center"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button_string"
            android:id="@+id/sign_in_button" />

        </LinearLayout>

    <TextView
        android:id="@+id/sign_up_buttonview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:clickable="true"
        android:text="@string/create_account"
        android:layout_weight="1"  />


</LinearLayout>