<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="8" >

        <EditText
            android:id="@+id/signup_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:gravity="center"
            android:padding="9dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/chrono_2_button"
            android:textColorHint="@color/chronology_light_color"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:gravity="center"
            android:padding="9dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/chrono_2_button"
            android:textColorHint="@color/chronology_light_color"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint= "@string/phone_number"
            android:gravity="center"
            android:inputType="phone"
            android:padding="9dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/chrono_2_button"
            android:textColorHint="@color/chronology_light_color"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="9dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/chrono_2_button"
            android:textColorHint="@color/chronology_light_color"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/signup_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/repeat_pass"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="9dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/chrono_2_button"
            android:textColorHint="@color/chronology_light_color"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_string"
            android:background="@drawable/chrono_button"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:id="@+id/sign_up_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/sign_in_buttonview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/sign_in"
        android:clickable="true"
        android:layout_weight="1"  />


</LinearLayout>